@@ -5,6 +5,7 @@
 === 1.0.15 ===
 * Added left/right and mid/side linking in the UI.
 * Added audio pre-mixing controls.
+* Updated build scripts and dependencies.
 
 === 1.0.14 ===
 * Updated build scripts and dependencies.
